Fixings related to Swagger Docs and some refactorings
